--- a/app/src/main/res/values/answers.xml
+++ b/app/src/main/res/values/answers.xml
@@ -2675,11 +2675,109 @@ V (а значит и, E, иначе оно было бы мультимноже
 Ориентированный граф (сокращённо орграф) G — это упорядоченная пара G := (V,A), где V — непустое множество вершин или узлов, и A — множество (упорядоченных) пар различных вершин, называемых дугами или ориентированными рёбрами. Пусть (v,w) — это дуга. Тогда вершину v называют её началом, а w — концом. Можно сказать, что дуга v → w ведёт от вершины v к вершине w.\n
 </item>
         <!--51-->
-        <item>Уругвай</item>
+        <item>51.КОНЕЧНЫЕ АВТОМАТЫ.\n\n\n\n\n\n\n
+Конечный автомат — это некоторая абстрактная модель, содержащая конечное число состояний чего-либо. Используется для представления и управления потоком выполнения каких-либо команд. Конечный автомат идеально подходит для реализации искусственного интеллекта в играх, получая аккуратное решение без написания громоздкого и сложного кода.\n\n
+Описание состояний автомата\n
+Конечный автомат можно представить в виде графа, вершины которого являются состояниями, а ребра — переходы между ними. Каждое ребро имеет метку, информирующую о том, когда должен произойти переход. Например, на изображении выше видно, что автомат сменит состояние «wander» на состояние «attack» при условии, что игрок находится рядом.\n\n
+FSM – это абстракция, которая используется для создания логики, в том числе и игровой. Например, обычно любой объект АИ это FSM, разного рода анимации обычно можно описать как FSM. Да и само состояние игры обычно описывается именно как ФСМ. Само название Finite-state machine говорит о том, что состояний имеется конечное количество и потому программист может каждое из них описать и задать поведение объекта (будь то монстр, космический корабль или состояние игры) в данном состоянии. В общем, ФСМ это штука нужная и полезная, и потому нам надо будет разобраться как её использовать на практике.\n\n
+FSM\n
+Фактически, FSM это просто некий “автомат”, который может иметь какие-то различные состояния и в один момент времени может находиться лишь в одном из этих состояний. Например, если враг может просто ходить по уровню, может атаковать игрока, а так же может прятаться, то его поведение легко задаётся с помощью Finite-state machine с тремя состояниями: иду, атакую, прячусь. Если мы опишем действия, которые должен выполнять враг в каждом из этих трёх состояний, а потом будем переключать их по каким-то законам (или случайным образом) – у игрока возникнет ощущение, что враг наделён каким-то интеллектом.\n\n
+FSM transition table\n
+В играх (да и не только) чаще всего описываются не только возможные состояния FSM, но и правила (условия) перехода FSM из одного состояния в другое. Чаще всего при проектировании эти правила представляются в виде таблицы перехода состояний и потому таблицу эту называют “state transition table”, явно намекая на то, что она задаёт как будет осуществляться переход (transition) из одного состояния FSM в другое её состояние. Ну, например, простая таблица FSM может выглядеть так:\n
+Состояние конечное/исходное	Прогулка	Атака\n
+Вижу врага	Атака	-\n
+Не вижу врага	-	Прогулка\n\n
+Работать FSM по этой таблице будет примерно так:\n
+Текущее состояние: Прогулка\n
+Вижу врага? Да. Перехожу в состояние “Атака”\n\n
+Текущее состояние: Атака\n
+Вижу врага? Нет. Перехожу в состояние “Прогулка”\n\n
+Текущее состояние: Прогулка\n
+Вижу врага? Нет. Не меняю состояние.\n\n
+Текущее состояние: Атака\n
+Вижу врага? Да. Не меняю состояние.\n\n
+Иными словами, FSM принимает данные (например, данные об игровом мире) и, основываясь на них, может менять (либо не менять) своё текущее состояние.\n\n
+FSM, вход и выход из состояний\n
+Для удобства работы, обычно каждому состоянию FSM так же задают 2 дополнительных функции: функцию входа в состояние и функцию выхода из состояния. Причин для их использования можно найти много, я же приведу лишь одну: эти функции позволяют “подготовить” объект к входу в состояние, либо к выходу их него. Что бы это не звучало банально, приведу несколько примеров:\n
+
+При входе в состояние “иду”, мы можем загрузить анимацию ходьбы\n
+При выходе из состояния “иду” мы можем выгрузить эту анимацию, поскольку она нам больше не нужна\n
+При входе в состояние “прячусь” мы можем запомнить: куда мы решили спрятаться, от кого мы прячемся, каким путём мы решили пройти в выбранную нами точку-нычку )))\n
+В случае, если ФСМ не является отдельной сущностью, а является частью объекта, часто добавляется ещё одна функция – функция “исполнения” состояния. Например, эта функция может переключать “кадры” анимации, для получения плавной ходьбы или реализовывать какой-то AI, либо и то и другое вместе.\n\n
+
+Методы реализации FSM\n
+Есть два наиболее часто применяемых метода реализации FSM:\n
+Статический FSM. Поведение Finite-state machine определяется на стадии компиляции программы и не может изменяться в runtime. Этот метод обеспечивает наибольшее быстродействие и он проще в реализации.\n
+Динамический метод реализации FSM. Поведение машины состояний может изменяться runtime путём добавления или удаления (включения/выключения) возможных состояний FSM. Гораздо более гибкий метод, но он значительно сложнее в реализации и используется достаточно редко.\n
+</item>
         <!--52-->
         <item>Уругвай</item>
         <!--53-->
-        <item>Уругвай</item>
+        <item>53.МАТЕМАТИЧЕСКОЕ МОДЕЛИРОВАНИЕ.\n\n\n\n\n
+Математическое моделирование - это средство изучения реального объекта, процесса или системы путем их замены математической моделью, более удобной для экспериментального исследования с помощью ЭВМ.\n
+Математическая модель является приближенным представлением реальных объектов, процессов или систем, выраженным в математических терминах и сохраняющим существенные черты оригинала. Математические модели в количественной форме, с помощью логико-математических конструкций, описывают основные свойства объекта, процесса или системы, его параметры, внутренние и внешние связи.\n
+В общем случае математическая модель реального объекта, процесса или системы представляется в виде системы функционалов\n
+Фi (X,Y,Z,t)=0,\n
+где X - вектор входных переменных, X=[x1,x2,x3, ... , xN]t,\n
+Y - вектор выходных переменных, Y=[y1,y2,y3, ... , yN]t,\n
+Z - вектор внешних воздействий, Z=[z1,z2,z3, ... , zN]t,\n
+t - координата времени.\n
+Построение математической модели заключается в определении связей между теми или иными процессами и явлениями, создании математического аппарата, позволяющего выразить количественно и качественно связь между теми или иными процессами и явлениями, между интересующими специалиста физическими величинами, и факторами, влияющими на конечный результат.\n
+Обычно их оказывается настолько много, что ввести в модель всю их совокупность не удается. При построении математической модели перед исследованием возникает задача выявить и исключить из рассмотрения факторы, несущественно влияющие на конечный результат (математическая модель обычно включает значительно меньшее число факторов, чем в реальной действительности). На основе данных эксперимента выдвигаются гипотезы о связи между величинами, выражающими конечный результат, и факторами, введенными в математическую модель. Такая связь зачастую выражается системами дифференциальных уравнений в частных производных (например, в задачах механики твердого тела, жидкости и газа, теории фильтрации, теплопроводности, теории электростатического и электродинамического полей).\n
+Конечной целью этого этапа является формулирование математической задачи, решение которой с необходимой точностью выражает результаты, интересующие специалиста.\n
+Форма и принципы представления математической модели зависит от многих факторов.\n\n
+По принципам построения математические модели разделяют на:\n
+1. аналитические;\n
+2. имитационные.\n
+В аналитических моделях процессы функционирования реальных объектов, процессов или систем записываются в виде явных функциональных зависимостей.\n\n
+Аналитическая модель разделяется на типы в зависимости от математической проблемы:\n
+1. уравнения (алгебраические, трансцендентные, дифференциальные, интегральные),\n
+2. аппроксимационные задачи (интерполяция, экстраполяция, численное интегрирование и дифференцирование),\n
+3. задачи оптимизации,\n
+4. стохастические проблемы.\n
+Однако по мере усложнения объекта моделирования построение аналитической модели превращается в трудноразрешимую проблему. Тогда исследователь вынужден использовать имитационное моделирование.\n
+В имитационном моделировании функционирование объектов, процессов или систем описывается набором алгоритмов. Алгоритмы имитируют реальные элементарные явления, составляющие процесс или систему с сохранением их логической структуры и последовательности протекания во времени. Имитационное моделирование позволяет по исходным данным получить сведения о состояниях процесса или системы в определенные моменты времени, однако прогнозирование поведения объектов, процессов или систем здесь затруднительно. Можно сказать, что имитационные модели - это проводимые на ЭВМ вычислительные эксперименты с математическими моделями, имитирующими поведение реальных объектов, процессов или систем.\n
+В зависимости от характера исследуемых реальных процессов и систем математические модели могут быть:\n
+1. детерминированные,\n
+2. стохастические.\n
+В детерминированных моделях предполагается отсутствие всяких случайных воздействий, элементы модели (переменные, математические связи) достаточно точно установленные, поведение системы можно точно определить. При построении детерминированных моделей чаще всего используются алгебраические уравнения, интегральные уравнения, матричная алгебра.\n
+Стохастическая модель учитывает случайный характер процессов в исследуемых объектах и системах, который описывается методами теории вероятности и математической статистики.\n\n
+По виду входной информации модели разделяются на:\n
+1. непрерывные,\n
+2. дискретные.\n
+Если информация и параметры являются непрерывными, а математические связи устойчивы, то модель - непрерывная. И наоборот, если информация и параметры - дискретны, а связи неустойчивы, то и математическая модель - дискретная.\n
+По поведению моделей во времени они разделяются на:\n
+1. статические,\n
+2. динамические.\n
+Статические модели описывают поведение объекта, процесса или системы в какой-либо момент времени. Динамические модели отражают поведение объекта, процесса или системы во времени.\n
+По степени соответствия между математической моделью и реальным объектом, процессом или системой математические модели разделяют на:
+1. изоморфные (одинаковые по форме),\n
+2. гомоморфные (разные по форме).\n\n
+Модель называется изоморфной, если между нею и реальным объектом, процессом или системой существует полное поэлементное соответствие.\n Гомоморфной - если существует соответствие лишь между наиболее значительными составными частями объекта и модели.\n
+Математические модели в количественной форме, с помощью логико-математических конструкций, описывают основные свойства объекта, процесса или системы, его параметры, внутренние и внешние связи.\n\n
+Для построения математической модели необходимо:\n
+1. тщательно проанализировать реальный объект или процесс;\n
+2. выделить его наиболее существенные черты и свойства;\n
+3. определить переменные, т.е. параметры, значения которых влияют на основные черты и свойства объекта;\n
+4. описать зависимость основных свойств объекта, процесса или системы от значения переменных с помощью логико-математических соотношений (уравнения, равенства, неравенства, логико-математические конструкций);\n
+5. выделить внутренние связи объекта, процесса или системы с помощью ограничений, уравнений, равенств, неравенств, логико-математических конструкций;\n
+6. определить внешние связи и описать их с помощью ограничений, уравнений, равенств, неравенств, логико-математических конструкций.\n
+Математическое моделирование, кроме исследования объекта, процесса или системы и составления их математического описания, также включает:
+1. построение алгоритма, моделирующего поведение объекта, процесса или системы;\n
+2. проверка адекватности модели и объекта, процесса или системы на основе вычислительного и натурного эксперимента;\n
+3. корректировка модели;\n
+4. использование модели.\n
+Математическое описание исследуемых процессов и систем зависит от:\n
+1. природы реального процесса или системы и составляется на основе законов физики, химии, механики, термодинамики, гидродинамики, электротехники, теории пластичности, теории упругости и т.д.\n
+2. требуемой достоверности и точности изучения и исследования реальных процессов и систем.\n\n
+На этапе выбора математической модели устанавливаются: линейность и нелинейность объекта, процесса или системы, динамичность или статичность, стационарность или нестационарность, а также степень детерминированности исследуемого объекта или процесса. При математическом моделировании сознательно отвлекаются от конкретной физической природы объектов, процессов или систем и, в основном, сосредотачиваются на изучении количественных зависимостей между величинами, описывающими эти процессы.\n
+Математическая модель никогда не бывает полностью тождественна рассматриваемому объекту, процессу или системе. Основанная на упрощении, идеализации она является приближенным описанием объекта. Поэтому результаты, полученные при анализе модели, носят приближенный характер. Их точность определяется степенью адекватности (соответствия) модели и объекта.\n
+Построение математической модели обычно начинается с построения и анализа простейшей, наиболее грубой математической модели рассматриваемого объекта, процесса или системы. В дальнейшем, в случае необходимости, модель уточняется, делается ее соответствие объекту более полным.\n
+Возьмем простой пример. Нужно определить площадь поверхности письменного стола. Обычно для этого измеряют его длину и ширину, а затем перемножают полученные числа. Такая элементарная процедура фактически обозначает следующее: реальный объект (поверхность стола) заменяется абстрактной математической моделью – прямоугольником. Прямоугольнику приписываются размеры, полученные в результате измерения длины и ширины поверхности стола, и площадь такого прямоугольника приближенно принимается за искомую площадь стола.\n
+Однако модель прямоугольника для письменного стола – это простейшая, наиболее грубая модель. При более серьезном подходе к задаче прежде, чем воспользоваться для определения площади стола моделью прямоугольника, эту модель нужно проверить. Проверки можно осуществить следующим образом: измерить длины противоположных сторон стола, а также длины его диагоналей и сравнить их между собой. Если, с требуемой степенью точности, длины противоположных сторон и длины диагоналей попарно равны между собой, то поверхность стола действительно можно рассматривать как прямоугольник. В противном случае модель прямоугольника придется отвергнуть и заменить моделью четырехугольника общего вида. При более высоком требовании к точности может возникнуть необходимость пойти в уточнении модели еще дальше, например, учесть закругления углов стола.\n
+С помощью этого простого примера было показано, что математическая модель не определяется однозначно исследуемым объектом, процессом или системой. Для одного и того же стола мы можем принять либо модель прямоугольника, либо более сложную модель четырехугольника общего вида, либо четырехугольника с закругленными углами. Выбор той или иной модели определяется требованием точности. С повышением точности модель приходится усложнять, учитывая новые и новые особенности изучаемого объекта, процесса или системы.\n
+Построение математической модели в прикладных задачах – один из наиболее сложных и ответственных этапов работы. Опыт показывает, что во многих случаях правильно выбрать модель – значит решить проблему более, чем наполовину. Трудность данного этапа состоит в том, что он требует соединения математических и специальных знаний. Поэтому очень важно, чтобы при решении прикладных задач математики обладали специальными знаниями об объекте, а их партнеры, специалисты, – определенной математической культурой, опытом исследования в своей области, знанием ЭВМ и программирования.\n
+</item>
         <!--54-->
         <item>54.ИМИТАЦИОННОЕ МОДЕЛИРОВАНИЕ.\n\n\n\n\n
 Имитационное моделирование является мощным инструментом исследования поведения реальных систем. Методы имитационного моделирования позволяют собрать необходимую информацию о поведении системы путем создания ее компьютерной модели. Эта информация используется затем для проектирования системы.\n
